@@ -1,3 +1,8 @@
+2006-01-28  Ales Hakl  <ales at hakl dot net>
+
+	* src/repl.c (sigint_handler_break): Handle C-C while evaluating
+	as user break.
+
 2006-01-27  Ales Hakl  <ales at hakl dot net>
 
 	* src/repl.c (noninteractive_repl): Handle input from something
